--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3000
-DATABASE_URL=postgres://usuario:senha@localhost:5432/imf_gadgets
-JWT_SECRET=sua_chave_secreta
+JWT_SECRET=szT1JMYv2+ydk7HpNwnCIty5E54UeK1RgTMNzProRUE=
+DB_NAME=imf_gadget
+DB_USER=janio
+DB_PASS=janio123
+DB_HOST=localhost
